# rocketship

./: .gitignore  README.md  manage.py  pyproject.toml
profiles/: urls.py
profiles/views/: hello.py
rocketship/: asgi.py  settings.py  test.py  urls.py  wsgi.py
tests/: test_rocketship.py
