[tool.poetry]
name = "rocketship"
version = "0.1.0"
description = ""
authors = ["Vikas Z <Vikas Z <vikas.zingade@skillate.com>>"]

[tool.poetry.dependencies]
python = "^3.8"
django-environ = "^0.4.5"
Django = "^3.2.4"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
django-extensions = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
